base/minio/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: minio
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: minio
      name: minio
    spec:
      containers:
        - command:
            - /bin/sh
            - -ce
            - /usr/bin/docker-entrypoint.sh minio server /export
              -S /etc/minio/certs/
              --address :9000 --console-address :9001
          image: quay.io/minio/minio:latest
          imagePullPolicy: IfNotPresent
          name: minio
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
            - containerPort: 9001
              name: http-console
              protocol: TCP
          resources:
            requests:
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /export
              name: export
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: export
          persistentVolumeClaim:
            claimName: minio
        - name: minio-user
          secret:
            defaultMode: 420
            secretName: minio
