base/minio/service-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-api
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
  type: ClusterIP
