base/minio/service-console.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
spec:
  ports:
    - name: http
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: minio
  type: ClusterIP
